First successful end to end callgit add -A

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 .idea/*
-Projects/PersistentServer/.idea/*
-Projects/PersistentServer/target/*
-Projects/PersistentServer/database/*
-Projects/PersistentServer/ps.log
+PersistentServer/.idea/*
+PersistentServer/target/*
+PersistentServer/database/*
+PersistentServer/ps.log
+.vs/*
+dotNetProject/WebAPI/bin/*
+dotNetProject/WebAPI/obj/*
+dotNetProject/Domain/bin/*
+dotNetProject/Domain/obj/*
+dotNetProject/Application/bin/*
+dotNetProject/Application/obj/*
+dotNetProject/BlazorWASM/bin/*
+dotNetProject/BlazorWASM/obj/*
+dotNetProject/FileData/bin/*
+dotNetProject/FileData/obj/*
+dotNetProject/HttpClients/bin/*
+dotNetProject/HttpClients/obj/*
+dotNetProject/vs/*
