--- a/dotNetProject/WebAPI/WebAPI.csproj
+++ b/dotNetProject/WebAPI/WebAPI.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
-		<ProjectReference Include="..\FileData\FileData.csproj" />
+		<ProjectReference Include="..\GrpcData\GrpcData.csproj" />
     </ItemGroup>
 
 </Project>
