--- a/dotNetProject/Domain/Domain.csproj
+++ b/dotNetProject/Domain/Domain.csproj
@@ -7,4 +7,8 @@
 
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.14" />
+    </ItemGroup>
+
 </Project>
