--- a/dotNetProject/BlazorWASM/BlazorWASM.csproj
+++ b/dotNetProject/BlazorWASM/BlazorWASM.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\HttpClients\HttpClients.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.14" />
+    </ItemGroup>
+
 </Project>
