--- a/dotNetProject/BlazorWASM/BlazorWASM.csproj
+++ b/dotNetProject/BlazorWASM/BlazorWASM.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.14" />
+      <PackageReference Include="Radzen.Blazor" Version="4.23.1" />
     </ItemGroup>
 
 </Project>
